--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -11,6 +11,7 @@
   \item [HTTPS] (ang.\ \emph{Hypertext Transfer Protocol Secure})
   \item [TLS] (ang.\ \emph{Transport Layer Security})
   \item [JSON] (ang.\ \emph{JavaScript Object Notation})
+  \item [SQL] (ang.\ \emph{Structured Query Language})
   \item [PostgreSQL] (ang.\ \emph{Postgre Structured Query Language})
   \item [XSS] (ang.\ \emph{Cross-Site Scripting})
 \end{description}
