--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -131,6 +131,16 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2011}
 }
 
+
+@misc{energa,
+    author = {ENERGA},
+    title = {{Serwis obsługi ENERGA24. PIERWSZE KROKI}},
+    note = {\url{https://www.energa.pl/energa24/pierwsze-kroki.html} [dostęp dnia 19 września 2024]},
+    year = {2024}
+}
+
+
+
 @booklet{Marcin,
 title = {{BPMN Notacja modelowania procesów biznesowych}},
 author = {Moś, M.},
