--- a/Dyplom/rozdzial01.tex
+++ b/Dyplom/rozdzial01.tex
@@ -8,7 +8,10 @@ Elektroniczne biura obsługi klienta nie tylko umożliwiają użytkownikom zdaln
 
 %\subsection{Istniejące rozwiązania na rynku} % Tworzenie podrozdziału nie jest tutaj konieczne
 
-Obecnie na rynku istnieje szereg rozwiązań eBOK, które są szeroko stosowane w różnych sektorach. Jednym z przykładów jest system „Energa24”, który umożliwia klientom dostęp do informacji o zużyciu energii, przeglądanie i pobieranie rachunków, płatności online i zgłaszanie awarii. Innym szeroko stosowanym rozwiązaniem jest eBOK dostarczany przez Miejskie Przedsiębiorstwo Wodociągów i Kanalizacji (MPWiK) w Warszawie, który umożliwia mieszkańcom monitorowanie zużycia wody, zarządzanie płatnościami i zgłaszanie problemów technicznych.
+Obecnie na rynku istnieje szereg rozwiązań eBOK, które są szeroko stosowane w różnych sektorach. Jednym z przykładów jest system „Energa24”, który umożliwia klientom dostęp do informacji o zużyciu energii, przeglądanie i pobieranie rachunków, płatności online i zgłaszanie awarii~\cite{energa}. 
+% TO DO: można to tutaj nieco rozwinąć (by pokazać podstawowe funkcje - tutaj ich zestaw jest nieco inny niż w ebokach spółdzielni mieszkaniowych - bo serwis jest głównie do obsługi rozliczeń energii na podstawie odczytów liczników - z historią fakturowania itp. podczas gdy w spółdzielniach są media, pożytki, podatki, opłaty śmieciowe itd.)
+
+Innym szeroko stosowanym rozwiązaniem jest eBOK dostarczany przez Miejskie Przedsiębiorstwo Wodociągów i Kanalizacji (MPWiK) w Warszawie, który umożliwia mieszkańcom monitorowanie zużycia wody, zarządzanie płatnościami i zgłaszanie problemów technicznych.
 % TO DO: proszę dodać cytowania do wskazanych przykładów (tj. do manuali, podręczów użytkownika, stron domowych projektów)
 % TO DO: można też dodać jakieś zrzuty z ekranu (na prawie cytatu)
 
